--- a/src/index.scss
+++ b/src/index.scss
@@ -9,4 +9,5 @@
 html,
 body {
     min-height: 100vh;
+    max-height: 100vh;
 }
